# qmmp-staging

./: AUTHORS  CMakeLists.txt  ChangeLog  ChangeLog.rus  README  README.RUS  README.UKR  qmmp.pri  qmmp.pro
src/app/: CMakeLists.txt  app.pro  builtincommandlineoption.cpp  builtincommandlineoption.h  lxdesupport.cpp  lxdesupport.h  main.cpp  qmmp-dir.desktop  qmmp-enqueue.desktop  qmmp-opencda.desktop  qmmp.desktop  qmmp.rc  qmmp_dir.desktop  qmmp_enqueue.desktop  qmmpapplication.cpp  qmmpapplication.h  qmmpstarter.cpp  qmmpstarter.h  unitysupport.cpp  unitysupport.h
src/app/appdata/: qmmp.appdata.xml
src/app/desktop-translations/: qmmp-dir_de.desktop.in  qmmp-dir_el.desktop.in  qmmp-dir_es.desktop.in  qmmp-dir_fi.desktop.in  qmmp-dir_fr.desktop.in  qmmp-dir_gl_ES.desktop.in  qmmp-dir_he.desktop.in  qmmp-dir_id.desktop.in  qmmp-dir_it.desktop.in  qmmp-dir_ko.desktop.in  qmmp-dir_nl.desktop.in  qmmp-dir_pl_PL.desktop.in  qmmp-dir_pt.desktop.in  qmmp-dir_pt_BR.desktop.in  qmmp-dir_ru.desktop.in  qmmp-dir_sk.desktop.in  qmmp-dir_sr_RS.desktop.in  qmmp-dir_tr.desktop.in  qmmp-dir_zh_CN.desktop.in  qmmp-enqueue_bg.desktop.in  qmmp-enqueue_de.desktop.in  qmmp-enqueue_el.desktop.in  qmmp-enqueue_es.desktop.in  qmmp-enqueue_fi.desktop.in  qmmp-enqueue_fr.desktop.in  qmmp-enqueue_gl_ES.desktop.in  qmmp-enqueue_he.desktop.in  qmmp-enqueue_id.desktop.in  qmmp-enqueue_it.desktop.in  qmmp-enqueue_nl.desktop.in  qmmp-enqueue_pl_PL.desktop.in  qmmp-enqueue_pt.desktop.in  qmmp-enqueue_pt_BR.desktop.in  qmmp-enqueue_ru.desktop.in  qmmp-enqueue_sk.desktop.in  qmmp-enqueue_sr_RS.desktop.in  qmmp-enqueue_tr.desktop.in  qmmp-enqueue_zh_CN.desktop.in  qmmp-opencda_bg.desktop.in  qmmp-opencda_de.desktop.in  (+52 more)
src/app/images/scalable/: qmmp.svgz
src/app/translations/: qmmp_bg.ts  qmmp_cs.ts  qmmp_de.ts  qmmp_el.ts  qmmp_en.ts  qmmp_es.ts  qmmp_fi.ts  qmmp_fr.ts  qmmp_gl_ES.ts  qmmp_he.ts  qmmp_hu.ts  qmmp_id.ts  qmmp_it.ts  qmmp_ja.ts  qmmp_kk.ts  qmmp_ko.ts  qmmp_locales.qrc  qmmp_lt.ts  qmmp_nl.ts  qmmp_pl_PL.ts  qmmp_pt.ts  qmmp_pt_BR.ts  qmmp_ru.ts  qmmp_sk.ts  qmmp_sr_BA.ts  qmmp_sr_RS.ts  qmmp_tr.ts  qmmp_uk_UA.ts  qmmp_zh_CN.ts  qmmp_zh_TW.ts
src/plugins/CommandLineOptions/IncDecVolumeOption/: CMakeLists.txt  IncDecVolumeOption.pro  incdecvolumeoption.cpp  incdecvolumeoption.h
src/plugins/CommandLineOptions/PlayListOption/: CMakeLists.txt  PlayListOption.pro  playlistoption.cpp  playlistoption.h
src/plugins/CommandLineOptions/SeekOption/: CMakeLists.txt  SeekOption.pro  seekoption.cpp  seekoption.h
src/plugins/CommandLineOptions/StatusOption/: CMakeLists.txt  StatusOption.pro  statusoption.cpp  statusoption.h
src/plugins/Effect/: CMakeLists.txt  Effect.pro
src/plugins/Effect/bs2b/: CMakeLists.txt  bs2b.pro  bs2bplugin.cpp  bs2bplugin.h  effectbs2bfactory.cpp  effectbs2bfactory.h  settingsdialog.cpp  settingsdialog.h
src/plugins/Effect/crossfade/: CMakeLists.txt  crossfade.pro  crossfadeplugin.cpp  crossfadeplugin.h  effectcrossfadefactory.cpp  effectcrossfadefactory.h  settingsdialog.cpp  settingsdialog.h
src/plugins/Effect/filewriter/: CMakeLists.txt  effectfilewriterfactory.cpp  effectfilewriterfactory.h  (+6 more)
src/plugins/Ui/: CMakeLists.txt
src/qmmp/: CMakeLists.txt  abstractengine.cpp  abstractengine.h  audioconverter.cpp  audioconverter.h  audioparameters.cpp  audioparameters.h  buffer.h  channelconverter.cpp  channelconverter_p.h  channelmap.cpp  channelmap.h  cueparser.cpp  cueparser.h  decoder.cpp  decoder.h  decoderfactory.h  dithering.cpp  dithering_p.h  effect.cpp  effect.h  effectfactory.h  emptyinputsource.cpp  emptyinputsource_p.h  enginefactory.h  eqsettings.cpp  eqsettings.h  fileinfo.cpp  fileinfo.h  fileinputsource.cpp  fileinputsource_p.h  inputsource.cpp  inputsource.h  inputsourcefactory.h  metadatamanager.cpp  metadatamanager.h  metadatamodel.cpp  metadatamodel.h  output.cpp  output.h  (+43 more)
src/qmmp/equ/: iir.c  iir.h  iir_fpu.c
src/qmmpui/: CMakeLists.txt  aboutdialog.cpp  aboutdialog_p.h  addurldialog.cpp  addurldialog_p.h  columneditor.cpp  columneditor_p.h  commandlinehandler.cpp  commandlinehandler.h  commandlinemanager.cpp  commandlinemanager.h  commandlineoption.h  configdialog.cpp  configdialog.h  covereditor.cpp  covereditor_p.h  coverviewer.cpp  coverviewer_p.h  cueeditor.cpp  cueeditor_p.h  detailsdialog.cpp  detailsdialog.h  filedialog.cpp  filedialog.h  filedialogfactory.h  fileloader.cpp  fileloader_p.h  general.cpp  general.h  generalfactory.cpp  generalfactory.h  groupedcontainer.cpp  groupedcontainer_p.h  jumptotrackdialog.cpp  jumptotrackdialog_p.h  mediaplayer.cpp  mediaplayer.h  metadataformatter.cpp  metadataformatter.h  metadataformattermenu.cpp  (+55 more)
src/qmmpui/forms/: addurldialog.ui  configdialog.ui  covereditor.ui  cueeditor.ui  jumptotrackdialog.ui  tageditor.ui  winfileassocpage.ui
src/qmmpui/translations/: libqmmpui_bg.ts  libqmmpui_cs.ts  libqmmpui_de.ts  libqmmpui_el.ts  libqmmpui_en.ts  libqmmpui_es.ts  libqmmpui_fi.ts  libqmmpui_fr.ts  libqmmpui_gl_ES.ts  libqmmpui_he.ts  libqmmpui_hu.ts  libqmmpui_id.ts  libqmmpui_it.ts  libqmmpui_ja.ts  libqmmpui_kk.ts  libqmmpui_ko.ts  libqmmpui_locales.qrc  libqmmpui_lt.ts  libqmmpui_nl.ts  libqmmpui_pl_PL.ts  libqmmpui_pt.ts  libqmmpui_pt_BR.ts  libqmmpui_ru.ts  libqmmpui_sk.ts  libqmmpui_sr_BA.ts  libqmmpui_sr_RS.ts  libqmmpui_tr.ts  libqmmpui_uk_UA.ts  libqmmpui_zh_CN.ts  libqmmpui_zh_TW.ts
src/qmmpui/txt/: authors.txt  authors_cs.txt  authors_de.txt  authors_el.txt  authors_es.txt  authors_fi.txt  authors_fr.txt  authors_gl_ES.txt  authors_he.txt  authors_id.txt  authors_it.txt  authors_ja.txt  authors_ko.txt  authors_lt.txt  authors_nl.txt  authors_pl_PL.txt  authors_pt.txt  authors_pt_BR.txt  authors_ru.txt  authors_sr_RS.txt  authors_tr.txt  authors_uk_UA.txt  authors_zh_CN.txt  description_es.txt  description_gl_ES.txt  description_id.txt  description_it.txt  description_ko.txt  description_nl.txt  description_pl_PL.txt  description_ru.txt  description_tr.txt  thanks_cs.txt  thanks_es.txt  thanks_fi.txt  thanks_he.txt  thanks_id.txt  thanks_it.txt  thanks_ja.txt  thanks_ko.txt  (+29 more)
(+3787 files in other folders)
